test/syntax/pass/causality/4.sync
let node switcher x = y where
  rec y = if x then 0 else (1 -> pre y)
