test/syntax/fail/not_combinatorial/let_merge.sync
type state = S0 | S1
let x =
  merge S0
    (S0 -> 0)
    (S1 -> 1)
